2003-09-05  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b59

	* Language update: Swedish (sv_SE)

2003-09-04  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b58

	* Language update: Polish (pl_PL)

	* New Language: Danish (da_DK)

2003-09-04  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b57

        * Fixed bug in voting where votes were not recorded if there is only 
          one choice.

2003-09-04  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b56

	* Synced all languages against latest changes

	* Language update: German (de_DE), Finnish (fi_FI)
	  Note: The German Update is also a Bugfix

        * Fixed incorrect language names (zh_TW), (fi_FI)

2003-09-03 Bharat Mediratta <bharat@menalto.com> 1.4.1-cvs-b55

	* Worked around a PHP serialization bug where serialize() stores 
	  decimal values with commas in de_DE, but unserialize() can't handle
	  that format.  To avoid this issue, we don't use decimal values. This
	  also turned up an issue in Album::save() where if we failed to save
	  photos.dat we'd continue onwards and try to save album.dat (including
	  the photos data there), when instead we should fail.
		- Removed file size rounding code from classes/Image.php
		- Adjusted move_photo.php to expect file sizes in bytes
		- Improved classes/Album.php's save() method

2003-09-03  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b54
	
	* Fix of bug introduced in -b53, where errors are generated in 
	  new Album code.

2003-09-03  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b53

	* This checkin is a fix to the partially broken -b49, by handling 
	  multi-dimensional arrays in defaults correctly.

	* Undo changes in b50.

	* Added nice functions array_stripslashes() and array_str_replace
	  that will clean up strings in any array.

	* Hidden text was written in both index.php and the include
	  files.  It is now only written in index.php

2003-09-03  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b52
