@@ -40,9 +40,9 @@ if (!isset($gallery)) {
 	$gallery = new stdClass();
 }
 
-$gallery->version = "1.4.1-cvs-b59";
+$gallery->version = "1.4.1-cvs-b60";
 $gallery->config_version = 53;
-$gallery->album_version = 16;
+$gallery->album_version = 17;
 $gallery->remote_protocol_version = 1;
 $gallery->user_version = 1;
 $gallery->url = "http://gallery.sourceforge.net";
