@@ -33,7 +33,6 @@ class Image {
 	var $thumb_height;
 	var $raw_width;
 	var $raw_height;
-	var $raw_filesize;
 	var $version;
 
 	function Image() {
@@ -53,8 +52,6 @@ class Image {
 			$this->raw_height = $h;
 			$this->width = $w;
 			$this->height = $h;
-			clearstatcache();
-			$this->raw_filesize= fs_filesize("$dir/$this->name.$this->type");
 		}
 	}
 
@@ -86,11 +83,12 @@ class Image {
 				list($w, $h) = getDimensions($filename);
 				$this->raw_width = $w;
 				$this->raw_height = $h;
-				clearstatcache();
-				$this->raw_filesize= fs_filesize($filename);
 				$changed = 1;
 			}
 		}
+
+		/* We introduced raw_filesize in 1.28 of this file, then got rid of it later. */
+		unset($this->raw_filesize);
 
 		if (strcmp($this->version, $gallery->album_version)) {
 			$this->version = $gallery->album_version;
@@ -255,11 +253,10 @@ class Image {
 	function getRawDimensions() {
 		return array($this->raw_width, $this->raw_height);
 	}
-	function setRawFileSize($size) { 
-		$this->raw_filesize=$size;	
-	}
-	function getRawFileSize() { 
-		return $this->raw_filesize;
+
+	function rawFileSize($dir) {
+	    $filename = "$dir/$this->name.$this->type";
+	    return fs_filesize($filename);
 	}
 }	
 
