@@ -140,23 +140,25 @@ if ($gallery->session->albumName && isset($index)) {
 							$postAlbum->setPhoto($newphoto,$newPhotoIndex);
 
 							/* resize the photo if needed */
-							if ($postAlbum->fields["resize_size"] > 0  || $postAlbum->fields["resize_file_size"] > 0) {
-								$photo = $postAlbum->getPhoto($newPhotoIndex);
-								list($w, $h) = $photo->image->getRawDimensions();
-								$size = ($photo->image->getRawFilesize() / 1000);
-								if ($w > $postAlbum->fields["resize_size"] ||
-								    $h > $postAlbum->fields["resize_size"] ||
-								    $size > $postAlbum->fields["resize_file_size"]) {
-									if (($postAlbum->fields["resize_size"] == $gallery->album->fields["resize_size"]) &&
-									    ($postAlbum->fields["resize_file_size"] == $gallery->album->fields["resize_file_size"]) &&
-									   ($myresized)) {
-										$pathToResized="$mydir/$myresized.$mytype";
-									} else {
-										$pathToResized="";
-										echo "- " . _("Resizing photo") ."<br>";
-										my_flush();
+							if ($postAlbum->fields["resize_size"] != 'off') {
+								if ($postAlbum->fields["resize_size"] > 0  || $postAlbum->fields["resize_file_size"] > 0) {
+									$photo = $postAlbum->getPhoto($newPhotoIndex);
+									list($w, $h) = $photo->image->getRawDimensions();
+									$size = ($photo->image->rawFilesize($postAlbum->getAlbumDir()) / 1000);
+									if ($w > $postAlbum->fields["resize_size"] ||
+									    $h > $postAlbum->fields["resize_size"] ||
+									    $size > $postAlbum->fields["resize_file_size"]) {
+										if (($postAlbum->fields["resize_size"] == $gallery->album->fields["resize_size"]) &&
+										    ($postAlbum->fields["resize_file_size"] == $gallery->album->fields["resize_file_size"]) &&
+										   ($myresized)) {
+											$pathToResized="$mydir/$myresized.$mytype";
+										} else {
+											$pathToResized="";
+											echo "- " . _("Resizing photo") ."<br>";
+											my_flush();
+										}
+										$postAlbum->resizePhoto($newPhotoIndex, $postAlbum->fields["resize_size"], $postAlbum->fields["resize_file_size"], $pathToResized);
 									}
-									$postAlbum->resizePhoto($newPhotoIndex, $postAlbum->fields["resize_size"], $postAlbum->fields["resize_file_size"], $pathToResized);
 								}
 							}
 							
